Sep 18 2004  devel  First generation of new gpsd client interface using generic
                     tcpclient core and support for ESRs gpsd2.0 protocol
                    Fixed dual TIME protocol
                    Fixed handling of weird chars at end of line
                    Moved gps protocol hooks to gpsdclient
Sep 17 2004  devel  Removed spurious headers from endian_magic that weren't
                     really necessary
Sep 16 2004  devel  Fixed spurious warning about NetworkServer constructor
                    Removed spurious debug prints from kisnetframe parser
                    Fixed file descriptor zeroing in tcpserver
                    Added ring buffer flushing to tcpserver shutdown
                    Moved tcpserver parsing back into main since I'm stupid
Sep 15 2004  devel  Added requeuing of fatal error messages as Kismet terminates
                    Moved configfile manuf handling to packetracker
Sep 14 2004  devel  Forked to new temporary branch, major updates, see SVN
                     changes
                    Moved config file parsing into alertracker and tcpserver
                    Moved more error messages to messagebus
Sep 08 2004  devel  Fixed earthdistance math w/ info from ESR for network 
                     distance guessing during live capture
Sep 01 2004  devel  Split up packet.h into endian and macaddr files in prep
                    Re-fixed friend class issue in macmap.h in gcc3.4
Aug 15 2004  devel  Fixed log sync event to not start if logging is disabled
                    Fixed BSS timestamp alerts to not trigger in adhoc networks
Aug 14 2004  devel  Fixed util.cc on gcc 3.4
Aug 13 2004  devel  Fixed error message for channel locking when in autofit 
                     sort
Aug 11 2004  devel  Fixed Run/ExecSysCmd functions in util
Aug 09 2004  devel  Split ringbuffer and iwconfig stuff into their own files,
                     cleaned up util.h