@@ -1,3 +1,5 @@
+Sep 19 2004  devel  Implemented modular speech and sound players.  Arrr.
+                    Implemented GPSD lock/lost sound and speech with new module
 Sep 18 2004  devel  First generation of new gpsd client interface using generic
                      tcpclient core and support for ESRs gpsd2.0 protocol
                     Fixed dual TIME protocol
